# ferrugo-seq

./: CMakeLists.txt  README.md  dependencies.cmake
include/ferrugo/seq/: cached.hpp  cartesian_product.hpp  chain.hpp  conditional_slice.hpp  containers.hpp  drop.hpp  drop_while.hpp  enumerate.hpp  filter.hpp  from.hpp  getlines.hpp  initializers.hpp  inspect.hpp  invoke.hpp  join.hpp  maybe.hpp  numeric.hpp  owning.hpp  pipe.hpp  range_traits.hpp  seq.hpp  sequence.hpp  slice.hpp  sort.hpp  step.hpp  take.hpp  take_while.hpp  take_while_drop_while.hpp  terminals.hpp  transform.hpp  transform_join.hpp  transform_maybe.hpp  tuple.hpp  utils.hpp  vec.hpp  view.hpp  zip.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  matchers.hpp  sequence.test.cpp  std_ostream.hpp
